--- a/Opacidad/MainWindow.xaml
+++ b/Opacidad/MainWindow.xaml
@@ -1,41 +1,49 @@
-﻿<Window x:Class="Opacidad.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Opacidad"
-        mc:Ignorable="d"
-        Title="MainWindow"
-        Height="450"
-        Width="800">
+﻿<Window
+    x:Class="Opacidad.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:Opacidad"
+    mc:Ignorable="d"
+    Title="Opacidad"
+    Height="450"
+    Width="800"
+    Icon="assets/opacidad.ico">
     <Grid>
-        <Image x:Name="episodioIVImagen"
-               Source="assets/episodioIV.jpg"
-               HorizontalAlignment="Left"
-               Height="300"
-               Margin="47,53,0,0"
-               VerticalAlignment="Top"
-               Width="228" 
-               MouseEnter="Opacidad_MouseEnter"
-               MouseLeave="NoOpacidad_MouseLeave"/>
-        <Image x:Name="episodioVImagen"
-               Source="assets/episodioV.jpg"
-               HorizontalAlignment="Left"
-               Height="300"
-               Margin="298,53,0,0"
-               VerticalAlignment="Top"
-               Width="195"
-               MouseEnter="Opacidad_MouseEnter" 
-               MouseLeave="NoOpacidad_MouseLeave"/>
-        <Image x:Name="episodioVIImagen"
-               Source="assets/episodioVI.jpg"
-               HorizontalAlignment="Left"
-               Height="300"
-               Margin="539,53,0,0"
-               VerticalAlignment="Top"
-               Width="209"
-               MouseEnter="Opacidad_MouseEnter"
-               MouseLeave="NoOpacidad_MouseLeave" />
+        <Image
+            x:Name="episodioIVImagen"
+            Source="assets/episodioIV.jpg"
+            HorizontalAlignment="Left"
+            Height="300"
+            Margin="50,53,0,0"
+            VerticalAlignment="Top"
+            Width="201"
+            Opacity="0.5"
+            MouseEnter="Opacidad_MouseEnter" 
+            MouseLeave="MediaOpacidad_MouseLeave" />
+        <Image
+            x:Name="episodioVImagen"
+            Source="assets/episodioV.jpg"
+            HorizontalAlignment="Left"
+            Height="300"
+            Margin="298,53,0,0"
+            VerticalAlignment="Top"
+            Width="195"
+            Opacity="0.5"
+            MouseEnter="Opacidad_MouseEnter"
+            MouseLeave="MediaOpacidad_MouseLeave" />
+        <Image
+            x:Name="episodioVIImagen"
+            Source="assets/episodioVI.jpg"
+            HorizontalAlignment="Left"
+            Height="300"
+            Margin="539,53,0,0"
+            VerticalAlignment="Top"
+            Width="194"
+            Opacity="0.5"
+            MouseEnter="Opacidad_MouseEnter"
+            MouseLeave="MediaOpacidad_MouseLeave" />
 
 
     </Grid>
